--- a/backend/sigsmu-backend/src/main/resources/application.properties
+++ b/backend/sigsmu-backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=sigsmu-backend
+
+# CONFIGURAÇÃO DO BANCO MARIADB
+spring.datasource.url=jdbc:mariadb://localhost:3306/harmonicdata
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# CONFIGURAÇÃO DO JPA (ORM)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
