--- a/frontend/sigsmu-tg2-frontend/package.json
+++ b/frontend/sigsmu-tg2-frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "botframework-directlinejs": "^0.15.6",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
