Criação do arquivo GlobalData.js para auxiliar na passagem de dados entre telas!

--- a/backend/sigsmu-backend/src/main/resources/application.properties
+++ b/backend/sigsmu-backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# CONFIGURAÇÃO DO JPA (ORM)
+# CONFIGURAÇÃO DO JPA (ORM) - create/update
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
