--- a/frontend/sigsmu-tg2-frontend/package.json
+++ b/frontend/sigsmu-tg2-frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:azure": "npm run build",  
     "lint": "eslint .",
     "preview": "vite preview"
   },
