--- a/frontend/sigsmu-tg2-frontend/package.json
+++ b/frontend/sigsmu-tg2-frontend/package.json
@@ -6,27 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:azure": "npm run build",  
+    "build:azure": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "axios": "^1.12.2",
     "botframework-directlinejs": "^0.15.6",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "vite": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "globals": "^16.3.0"
   }
 }
